--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,18 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
-            <groupId>be.bagofwords</groupId>
+            <groupId>com.github.koendeschacht</groupId>
             <artifactId>mini-dep-i</artifactId>
-            <version>2017.1.0</version>
+            <version>2017.1.1</version>
         </dependency>
         <dependency>
             <groupId>com.mchange</groupId>
