--- a/src/main/resources/mini-orm.properties
+++ b/src/main/resources/mini-orm.properties
@@ -1,3 +1,3 @@
-database_host=localhost
-database_type=mysql
-database_extra_args=
+database.host=localhost
+database.type=mysql
+database.extra.args=
