--- a/src/main/resources/mini-orm.properties
+++ b/src/main/resources/mini-orm.properties
@@ -1,3 +1,3 @@
-database.host=localhost
-database.type=mysql
-database.extra.args=verifyServerCertificate=false&useSSL=true
+jdbc.url=jdbc:h2:/tmp/test-db
+database.user=
+database.password=
